--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
-.card img{
-  height:200px;
+* {
+  margin: 0;
+  padding: 0;
 }
+
+.card {
+  margin-bottom: 50px;
+}
+
+.card img{
+  margin: auto;
+  max-width: 150px;
+}
+
